package com.hive.jiangminzhi;

public class User {
    public Long id;
    public String username;
    public String nickname;
}
